tests/noproph/vec_std.stderr
error: custom attribute panicked
   --> ../tests/noproph/vec_std.rs:293:1
    |
293 | / #[extract_lemma(
294 | |     forall ptr: Unique<T>, cap, len.
295 | |     assuming { ix < len }
296 | |     from { vec_ref_mut_pcl(vec, ptr, cap, len) }
297 | |     extract { Ownable::own(&mut (*(ptr.as_ptr().add(ix)))) }
298 | | )]
    | |__^
    |
    = help: message: called `Option::unwrap()` on a `None` value

error[E0432]: unresolved import `gilogic::macros::no_prophecies`
  --> ../tests/noproph/vec_std.rs:13:46
   |
13 |         assertion, extract_lemma, predicate, no_prophecies::with_freeze_lemma_for_mutref,
   |                                              ^^^^^^^^^^^^^ could not find `no_prophecies` in `macros`

warning: unused imports: `all_own_swap`, `specification`
  --> ../tests/noproph/vec_std.rs:11:40
   |
11 |     iterated::no_prophecies::{all_own, all_own_swap},
   |                                        ^^^^^^^^^^^^
...
14 |         specification, show_safety, lemma
   |         ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

[TIMESTAMP WARN  lib_rtg::metadata] could not read metadata for crate `"std"`: Os { code: 2, kind: NotFound, message: "No such file or directory" }
building predctx DefId(0:87 ~ vec_std[56b5]::{impl#2}::own) []
compiling DefId(0:91 ~ vec_std[56b5]::assert_correct_vs)
building predctx DefId(0:94 ~ vec_std[56b5]::assert_correct_vs::{closure#0}::{closure#0}) [T/#0]
building predctx DefId(0:94 ~ vec_std[56b5]::assert_correct_vs::{closure#0}::{closure#0}) [T/#0]
compiling trusted lemma Signature { args: [Generic("pty_T0"), Program("p", *const T/#0), Program("len", usize)], contract: Some(Contract { timeless: false, pre: Star { left: GA { name: "value", ins: [BinOp { operator: LstNth, left_operand: LVar("#p"), right_operand: Lit(Int(0)) }, BinOp { operator: LstNth, left_operand: LVar("#p"), right_operand: Lit(Int(1)) }, EList([Lit(String("array")), PVar("pty_T0"), LVar("#len")])], outs: [LVar("#values")] }, right: Pred { name: "gilogic::iterated::no_prophecies::all_own::<T>", params: [PVar("pty_T0"), LVar("#values")] } }, post: [([], Star { left: GA { name: "value", ins: [BinOp { operator: LstNth, left_operand: LVar("#p"), right_operand: Lit(Int(0)) }, BinOp { operator: LstNth, left_operand: LVar("#p"), right_operand: Lit(Int(1)) }, EList([Lit(String("array")), PVar("pty_T0"), LVar("#len")])], outs: [LVar("#values")] }, right: Pred { name: "gilogic::iterated::no_prophecies::all_own::<T>", params: [PVar("pty_T0"), LVar("#values")] } })], trusted: false }), temp_gen: TempGenerator { cur_lvar: 0 } }
building predctx DefId(0:126 ~ vec_std[56b5]::{impl#7}::own) [T/#0]
building predctx DefId(0:96 ~ vec_std[56b5]::{impl#4}::new_spec_2e75f036_5b51_4f69_a419_09516dd2b043) [T/#0]
building predctx DefId(0:96 ~ vec_std[56b5]::{impl#4}::new_spec_2e75f036_5b51_4f69_a419_09516dd2b043) [T/#0]
building predctx DefId(0:100 ~ vec_std[56b5]::{impl#4}::with_capacity_spec_839e0c7f_29aa_45c1_b14d_48d52c092b1b) [T/#0]
building predctx DefId(0:100 ~ vec_std[56b5]::{impl#4}::with_capacity_spec_839e0c7f_29aa_45c1_b14d_48d52c092b1b) [T/#0]
building predctx DefId(0:104 ~ vec_std[56b5]::{impl#4}::push_spec_477b0c35_a8f2_4cec_a501_8d7a4e678649) [T/#0]
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _2
building predctx DefId(0:104 ~ vec_std[56b5]::{impl#4}::push_spec_477b0c35_a8f2_4cec_a501_8d7a4e678649) [T/#0]
error[E0425]: cannot find function `freeze_pcl` in this scope
   --> ../tests/noproph/vec_std.rs:389:9
    |
389 |         freeze_pcl(self);
    |         ^^^^^^^^^^------
    |         |
    |         help: try calling `freeze_pcl` as a method: `self.freeze_pcl()`

building predctx DefId(0:108 ~ vec_std[56b5]::{impl#4}::pop_spec_0720027b_4fca_4665_8e71_86a5784d7b37) [T/#0]
[TIMESTAMP WARN  lib_rtg::codegen::block] Not handling drop properly yet: _18
building predctx DefId(0:108 ~ vec_std[56b5]::{impl#4}::pop_spec_0720027b_4fca_4665_8e71_86a5784d7b37) [T/#0]
error[E0425]: cannot find function `freeze_pcl` in this scope
   --> ../tests/noproph/vec_std.rs:426:9
    |
426 |         freeze_pcl(self);
    |         ^^^^^^^^^^------
    |         |
    |         help: try calling `freeze_pcl` as a method: `self.freeze_pcl()`

error[E0425]: cannot find function `extract_ith` in this scope
   --> ../tests/noproph/vec_std.rs:434:9
    |
434 |         extract_ith(self, ix);
    |         ^^^^^^^^^^^----------
    |         |
    |         help: try calling `extract_ith` as a method: `self.extract_ith(ix)`

building predctx DefId(0:112 ~ vec_std[56b5]::{impl#4}::index_mut_spec_d0c11dda_6848_4c51_b6b0_de2404e18be3) [T/#0]
building predctx DefId(0:112 ~ vec_std[56b5]::{impl#4}::index_mut_spec_d0c11dda_6848_4c51_b6b0_de2404e18be3) [T/#0]
error[E0425]: cannot find function `freeze_pcl` in this scope
   --> ../tests/noproph/vec_std.rs:440:9
    |
440 |         freeze_pcl(self);
    |         ^^^^^^^^^^------
    |         |
    |         help: try calling `freeze_pcl` as a method: `self.freeze_pcl()`

error[E0425]: cannot find function `extract_ith` in this scope
   --> ../tests/noproph/vec_std.rs:450:9
    |
450 |         extract_ith(self, ix);
    |         ^^^^^^^^^^^----------
    |         |
    |         help: try calling `extract_ith` as a method: `self.extract_ith(ix)`

building predctx DefId(0:116 ~ vec_std[56b5]::{impl#4}::get_unchecked_mut_spec_4c24306f_74ec_4406_bae6_544afeebb99f) [T/#0]
building predctx DefId(0:116 ~ vec_std[56b5]::{impl#4}::get_unchecked_mut_spec_4c24306f_74ec_4406_bae6_544afeebb99f) [T/#0]
building predctx DefId(0:120 ~ vec_std[56b5]::{impl#4}::get_mut_spec_7d2fce9a_2685_4c02_a529_5bc756b3a27d) [T/#0]
building predctx DefId(0:120 ~ vec_std[56b5]::{impl#4}::get_mut_spec_7d2fce9a_2685_4c02_a529_5bc756b3a27d) [T/#0]
building predctx DefId(20:246 ~ gilogic[8e9c]::iterated_no_pcy::all_own) [T/#0]
building predctx DefId(20:210 ~ gilogic[8e9c]::ownable::{impl#10}::own) []
building predctx DefId(20:192 ~ gilogic[8e9c]::ownable::{impl#0}::own) ['{erased}, Vec<T/#0>]
building predctx DefId(20:189 ~ gilogic[8e9c]::ownable::Ownable::own) [T/#0]
building predctx DefId(20:237 ~ gilogic[8e9c]::ownable::{impl#4}::own) []
building predctx DefId(20:232 ~ gilogic[8e9c]::ownable::{impl#2}::own) [T/#0]
building predctx DefId(20:192 ~ gilogic[8e9c]::ownable::{impl#0}::own) ['{erased}, T/#0]
building predctx DefId(20:232 ~ gilogic[8e9c]::ownable::{impl#2}::own) [&'{erased} mut T/#0]
building predctx DefId(0:116 ~ vec_std[56b5]::{impl#4}::get_unchecked_mut_spec_4c24306f_74ec_4406_bae6_544afeebb99f) [T/#0]
error: aborting due to 7 previous errors; 1 warning emitted

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
